--- a/source/index.html
+++ b/source/index.html
@@ -6,15 +6,15 @@
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
-    <div class="header">Home</div>
+    <div class="header"><a href="index.html">Home</a></div>
     <div class="content-wrapper">
 
       <div class="content">
         Here's a list of the wonderful pages we've made so far:
         <br/>
         <ul>
-          <li>something</li>
-          <li>something</li>
+          <li><a href="adder.html">Adder</a></li>
+          <li><a href="subtractor.html">Subtractor</a></li>
         </ul>
       </div>
 
