add react to the index

--- a/source/index.html
+++ b/source/index.html
@@ -15,6 +15,7 @@
         <ul>
           <li><a href="adder.html">Adder</a></li>
           <li><a href="subtractor.html">Subtractor</a></li>
+          <li><a href="react.html">React</a></li>
         </ul>
       </div>
 
