add react tic-tac-toe example

--- a/source/index.html
+++ b/source/index.html
@@ -16,6 +16,7 @@
           <li><a href="adder.html">Adder</a></li>
           <li><a href="subtractor.html">Subtractor</a></li>
           <li><a href="react.html">React</a></li>
+          <li><a href="tic-tac-toe.html">Tic Tac Toe</a></li>
         </ul>
       </div>
 
