add a basic html page

--- a/source/index.html
+++ b/source/index.html
@@ -13,6 +13,7 @@
         Here's a list of the wonderful pages we've made so far:
         <br/>
         <ul>
+          <li><a href="basic.html">Basic</a></li>
           <li><a href="adder.html">Adder</a></li>
           <li><a href="subtractor.html">Subtractor</a></li>
           <li><a href="react.html">React</a></li>
