--- a/source/basic.html
+++ b/source/basic.html
@@ -9,7 +9,7 @@
     <div class="content-wrapper">
 
       <div class="content">
-        Add content here!
+        Hello world!
       </div>
 
     </div>
