Add clicker page

--- a/source/index.html
+++ b/source/index.html
@@ -18,6 +18,7 @@
           <li><a href="subtractor.html">Subtractor</a></li>
           <li><a href="react.html">React</a></li>
           <li><a href="tic-tac-toe.html">Tic Tac Toe</a></li>
+          <li><a href="clicker.html">Pie Clicker</a></li>
         </ul>
       </div>
 
