--- a/source/index.html
+++ b/source/index.html
@@ -19,6 +19,7 @@
           <li><a href="react.html">React</a></li>
           <li><a href="tic-tac-toe.html">Tic Tac Toe</a></li>
           <li><a href="clicker.html">Pie Clicker</a></li>
+          <li><a href="Ava.html">Ava</a></li>
         </ul>
       </div>
 
