Adding a blurb to the home page

--- a/source/index.html
+++ b/source/index.html
@@ -10,6 +10,10 @@
     <div class="content-wrapper">
 
       <div class="content">
+        You can take something as basic as adding and subtracting and put your own spin on it.</br> 
+        It could make math and science more engaging or you could make something totally different!<br/>
+        The internet is your oyster!</br>
+      </br>
         Here's a list of the wonderful pages we've made so far:
         <br/>
         <ul>
