--- a/source/tic-tac-toe.html
+++ b/source/tic-tac-toe.html
@@ -7,7 +7,38 @@
   </head>
   <body>
 
-    <div id="root"></div>
+    <div id="root">
+
+      <table>
+        <tr id="row-1">
+          <td class="cell" id="row-1-cell-1">&nbsp;</td>
+          <td class="cell" id="row-1-cell-2">&nbsp;</td>
+          <td class="cell" id="row-1-cell-3">&nbsp;</td>
+          <td class="cell" id="row-1-cell-4">&nbsp;</td>
+        </tr>
+        <tr id="row-2">
+          <td class="cell" id="row-2-cell-1">&nbsp;</td>
+          <td class="cell" id="row-2-cell-2">&nbsp;</td>
+          <td class="cell" id="row-2-cell-3">&nbsp;</td>
+          <td class="cell" id="row-2-cell-4">&nbsp;</td>
+        </tr>
+        <tr id="row-3">
+          <td class="cell" id="row-3-cell-1">&nbsp;</td>
+          <td class="cell" id="row-3-cell-2">&nbsp;</td>
+          <td class="cell" id="row-3-cell-3">&nbsp;</td>
+          <td class="cell" id="row-3-cell-4">&nbsp;</td>
+        </tr>
+
+        <tr id="row-4">
+          <td class="cell" id="row-4-cell-1">&nbsp;</td>
+          <td class="cell" id="row-4-cell-2">&nbsp;</td>
+          <td class="cell" id="row-4-cell-3">&nbsp;</td>
+          <td class="cell" id="row-4-cell-4">&nbsp;</td>
+        </tr>
+      </table>
+  
+
+    </div>
 
     <!-- Load React. -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
@@ -17,5 +48,6 @@
 
     <!-- Load our React component. -->
     <script src="tic-tac-toe.js" type="text/babel"></script>
+
   </body>
 </html>
