--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
           <li><a href="subtractor.html">Subtractor</a></li>
           <li><a href="react.html">React</a></li>
           <li><a href="tic-tac-toe.html">Tic Tac Toe</a></li>
-          <li><a href="Reagan-madison.html">Reagan-madison</a></li>
+          <li><a href="Reagan-Madison.html">Reagan-madison</a></li>
           <li><a href="clicker.html">Pie Clicker</a></li>
           <li><a href="Ava.html">Ava</a></li>
         </ul>
