--- a/source/Ava.html
+++ b/source/Ava.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <title>Add React in One Minute</title>
-    <link href="tic-tac-toe.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
 
@@ -16,6 +15,6 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
     <!-- Load our React component. -->
-    <script src="tic-tac-toe.js" type="text/babel"></script>
+    <script src="Ava.jsx" type="text/babel"></script>
   </body>
 </html>
