Added pie image and started clicker functionality.

--- a/source/clicker.html
+++ b/source/clicker.html
@@ -1,3 +1,15 @@
-<div>
-    Clicker Page!
-</div>
+<!DOCTYPE HTML>
+<html>
+<head>
+        <script type="text/javascript" src="clicker.js"></script>
+        <link rel="stylesheet" type="text/css" href="click.css">
+    </head>
+   
+  
+    <img onclick="click2();" class="image-holder" src="Pieimage.jpg" alt="Pie" height="200" width="200">
+
+<div id="counter">0</div>
+</html>
+   
+
+  
