--- a/source/Ava.html
+++ b/source/Ava.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Add React in One Minute</title>
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="Ava.css">
   </head>
   <body>
 
