--- a/source/Reagan-Madison.html
+++ b/source/Reagan-Madison.html
@@ -16,6 +16,11 @@
         <li>food </li>
     </list>
     <img src="Tiger.jpg" alt="Girl in a jacket" width="300" height="300">
+    <img src="sloths.jpg" width="300" height="300">
+    <img src="clothes.jpg" width="300" height="300">
+    <img src="dog.jpg" width="300" height="300">
+    <img src="pizza.jpg" width="300" height="300">
+
 </body>
 
 
